# open-productivity-deck

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mobile/: app.js  index.html  manifest.webmanifest  setup.html  sw.js
src-tauri/src/: app_icon.rs  audio.rs  config.rs  favicon.rs  launcher.rs  lib.rs  main.rs  server.rs  service.rs  spotify.rs  state.rs  tls.rs  unread.rs
src-tauri/windows/: installer.nsi
