[package]
name = "open-productivity-deck"
version = "0.1.2"
description = "Um stream deck livre para produtividade"
authors = ["Open Productivity Deck contributors"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "open_productivity_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.8", features = ["json", "tokio", "http1"] }
csv = "1.3"
directories = "6"
local-ip-address = "0.6"
open = "5"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["net", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant"
] }
