[package]
name = "open-productivity-deck"
version = "0.5.1"
description = "Um stream deck livre para produtividade"
authors = ["Open Productivity Deck contributors"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "open_productivity_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.8", features = ["json", "tokio", "http1"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
async-stream = "0.3"
base64 = "0.22"
csv = "1.3"
directories = "6"
local-ip-address = "0.6"
notify = "8"
open = "5"
regex = "1.11"
rusqlite = { version = "0.37", features = ["bundled"] }
rcgen = { version = "0.14", default-features = false, features = ["crypto", "ring", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["net", "sync", "time"] }
time = { version = "0.3", default-features = false, features = ["std"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Media_Control",
  "Win32_Foundation",
  "Win32_Media_Audio_Endpoints",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_WinRT"
] }
